--- a/Coroners findings _ Attorney-General’s Department.html
+++ b/Coroners findings _ Attorney-General’s Department.html
@@ -409,21 +409,15 @@
 
           <!-- ReadSpeaker globals_asset_contents_raw:516668 -->
           <!-- coveoon: index -->
+          <link rel="stylesheet" href="dist/table-filter.css">
           <section class="table-filter-legacy">
             <!-- Table filter -->
-            <!-- 
-              NOTE: Future enhancements - The following data attributes are not yet implemented:
-              - data-column-filters: Enable column-specific dropdown filters
-              - data-pagination-items-per-page: Add pagination support
-              - data-default-column: Set default sort column
-              - data-order: Set default sort order
-              Currently only basic text filtering (data-table-filter, data-table-id, data-search-placeholder) is supported.
-            -->
             <div data-table-filter data-table-id="table31283" data-search-placeholder="Example: fire"
               data-column-filters="Year of finding; Category" data-pagination-items-per-page="10"
               data-default-column="Death of" data-order="Ascending">
             </div>
           </section>
+          <script src="dist/table-filter.js"></script>
           <table class="table table-striped w-100" id="table31283">
             <thead>
               <tr>
