--- a/public/index.html
+++ b/public/index.html
@@ -419,7 +419,8 @@
               - data-order: Set default sort order
               Currently only basic text filtering (data-table-filter, data-table-id, data-search-placeholder) is supported.
             -->
-            <div data-table-filter data-table-id="table31283" data-search-placeholder="Example: fire"
+            <div data-table-filter data-table-id="table31283"
+              data-search-placeholder="Try: fire water, &quot;John Smith&quot;, fire AND water"
               data-column-filters="Year of finding; Category" data-pagination-items-per-page="10"
               data-default-column="Death of" data-order="Ascending">
             </div>
