--- a/public/index.html
+++ b/public/index.html
@@ -420,7 +420,7 @@
               Currently only basic text filtering (data-table-filter, data-table-id, data-search-placeholder) is supported.
             -->
             <div data-table-filter data-table-id="table31283"
-              data-search-placeholder="Try: fire water, &quot;John Smith&quot;, fire AND water"
+              data-search-placeholder="Try: fire water, 'John Smith', fire AND water"
               data-column-filters="Year of finding; Category" data-pagination-items-per-page="10"
               data-default-column="Death of" data-order="Ascending">
             </div>
