--- a/public/index.html
+++ b/public/index.html
@@ -409,20 +409,12 @@
 
           <!-- ReadSpeaker globals_asset_contents_raw:516668 -->
           <!-- coveoon: index -->
-          <section class="table-filter-legacy">
+          <section class="table-filter-legacy my-5">
             <!-- Table filter -->
-            <!-- 
-              NOTE: Future enhancements - The following data attributes are not yet implemented:
-              - data-column-filters: Enable column-specific dropdown filters
-              - data-pagination-items-per-page: Add pagination support
-              - data-default-column: Set default sort column
-              - data-order: Set default sort order
-              Currently only basic text filtering (data-table-filter, data-table-id, data-search-placeholder) is supported.
-            -->
-            <div data-table-filter data-table-id="table31283"
-              data-search-placeholder="Try: fire water, 'John Smith', fire AND water"
-              data-column-filters="Year of finding; Category" data-pagination-items-per-page="10"
-              data-default-column="Death of" data-order="Ascending">
+            <div data-table-filter="" data-table-id="table31283"
+              data-search-placeholder="Try: fire flood, ''John Smith'', fire AND flood"
+              data-column-filters="Category; Year of finding; Location" data-pagination-items-per-page="10"
+              data-default-column="" data-order="Ascending">
             </div>
           </section>
           <table class="table table-striped w-100" id="table31283">
