Fixed initial sort logic

--- a/public/index.html
+++ b/public/index.html
@@ -414,7 +414,7 @@
             <div data-table-filter="" data-table-id="table31283"
               data-search-placeholder="Try: fire flood, ''John Smith'', fire AND flood"
               data-column-filters="Category; Year of finding; Location" data-pagination-items-per-page="10"
-              data-default-column="" data-order="Ascending">
+              data-default-column="Year of finding" data-order="Descending">
             </div>
           </section>
           <table class="table table-striped w-100" id="table31283">
